# binary-blackhole

./: .editorconfig  .envrc.example  .gitignore  .prettierignore  CLOUDFLARE_NOTES.md  Cargo.toml  CargoLambda.toml  DB_SETUP.md  KSJ_NOTES.md  README.md  dev.js  package.json  pnpm-lock.yaml
crates/api/: Cargo.toml
crates/api-streaming/: Cargo.toml
crates/api-streaming/src/: main.rs
crates/api/src/: error.rs  main.rs  main_streaming.rs  query.rs  sentry.rs  state.rs  threads.rs
crates/api/src/buffered/: api.rs  data_requests.rs  datasets.rs  mod.rs  query.rs  threads.rs
crates/api/src/data/: threads.rs
crates/api/src/streaming/: api.rs  mod.rs  threads.rs
crates/chatter/: Cargo.toml
crates/chatter/data/: system_prompt_01.txt
crates/chatter/src/: chatter.rs  chatter_context.rs  chatter_message.rs  error.rs  functions.rs  geom.rs  lib.rs  pg_helpers.rs  rows_to_tsv.rs
crates/chatter/src/data/: dynamodb.rs  dynamodb_schema.rs  error.rs  migrations.rs  mod.rs  types.rs
crates/chatter/src/data/types/: chat_message.rs  chat_thread.rs  data_request.rs  mod.rs  sql_query.rs
crates/chatter/src/functions/: mod.rs  utils.rs
crates/chatter/src/functions/impls/: describe_tables.rs  mod.rs  query_database.rs  request_unavailable_data.rs
crates/cli/: Cargo.toml
crates/cli/src/: cli.rs  cli_chatter.rs  main.rs
crates/data/: Cargo.toml
crates/data/src/: dynamodb.rs  dynamodb_schema.rs  error.rs  lib.rs  migrations.rs
crates/data/src/types/: chat_message.rs  chat_thread.rs
