[package]
name = "api-streaming"
version = "0.1.0"
edition = "2024"
license.workspace = true
authors.workspace = true

[dependencies]
data = { path = "../data" }
chatter = { path = "../chatter" }

lambda_http = { version = "0.13.0", default-features = false, features = ["apigw_http", "tracing"] }
tokio = { version = "1", features = ["macros"] }

axum = { version = "0.8.1", features = ["macros"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tower-http = { version = "0.6.2", features = ["cors"] }
anyhow = "1.0"
ulid = { version = "1.2.0" }
chrono = { version = "0.4.40", features = ["serde"] }
futures = "0.3.31"
tokio-stream = "0.1.17"
