[package]
name = "api"
version = "0.1.0"
edition = "2024"
license.workspace = true
authors.workspace = true

[[bin]]
name = "api"
path = "src/main.rs"

[[bin]]
name = "api-streaming"
path = "src/main_streaming.rs"
required-features = ["streaming"]

[dependencies]
chatter = { path = "../chatter" }

lambda_http = { version = "0.13.0", default-features = false, features = ["apigw_http", "tracing"] }
tokio = { version = "1", features = ["macros"] }

axum = { version = "0.8.1", features = ["macros"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tower-http = { version = "0.6.2", features = ["cors"] }
anyhow = "1.0"
ulid = { version = "1.2.0" }
geojson = "0.24.2"
geo = "0.29"
geo-types = "0.7"
chrono = { version = "0.4.40", features = ["serde"] }
futures = { version = "0.3.31", optional = true }
tokio-stream = { version = "0.1.17", optional = true }
async-stream = { version = "0.3.6", optional = true }
urlencoding = "2.1.3"

[features]
all = ["streaming"]
streaming = ["dep:tokio-stream", "dep:futures", "dep:async-stream"]
