[package]
name = "api"
version = "0.1.0"
edition = "2024"
license.workspace = true
authors.workspace = true

[[bin]]
name = "api"
path = "src/main.rs"

[[bin]]
name = "api-streaming"
path = "src/main_streaming.rs"
required-features = ["streaming"]

[dependencies]
chatter = { path = "../chatter" }

lambda_http = { version = "0.13.0", default-features = false, features = ["apigw_http", "tracing"] }
tokio = { workspace = true }
tokio-postgres = { workspace = true }
deadpool-postgres = { workspace = true }

axum = { version = "0.8.1", features = ["macros"] }
serde = { workspace = true }
serde_json = { workspace = true }
tower-http = { version = "0.6.2", features = ["cors"] }
anyhow = "1.0"
ulid = { workspace = true }
geojson = "0.24.2"
geo = "0.29"
geo-types = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }
async-stream = { workspace = true, optional = true }
urlencoding = "2.1.3"

[features]
all = ["streaming"]
streaming = ["dep:tokio-stream", "dep:futures", "dep:async-stream"]
