[package]
name = "chatter"
version = "0.1.0"
edition = "2024"
license.workspace = true
authors.workspace = true

[dependencies]
async-openai = "0.27.2"
async-stream = "0.3.6"
derive_builder = "0.20.2"
futures = { version = "0.3.31" }
geo-traits = "0.2.0"
geo-types = "0.7"
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["sync"] }
tokio-postgres = { version = "0.7", features = ["with-geo-types-0_7", "with-serde_json-1"] }
tokio-stream = { version = "0.1.17" }
ulid = "1.2.0"
wkb = "0.8.0"
