[package]
name = "chatter"
version = "0.1.0"
edition = "2024"
license.workspace = true
authors.workspace = true

[dependencies]
async-openai = "0.27.2"
async-stream = "0.3.6"
derive_builder = "0.20.2"
futures = { version = "0.3.31" }
geo-traits = "0.2.0"
geo-types = "0.7"
km-to-sql = "0.1.1"
rust_decimal = { version = "1.37.1", features = ["db-tokio-postgres"] }
schemars = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tokio = { workspace = true }
tokio-postgres = { workspace = true }
deadpool-postgres = { workspace = true }
tokio-stream = { version = "0.1.17" }
ulid = "1.2.0"
wkb = "0.8.0"

# used in data/
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
chrono = { version = "0.4.40", features = ["serde"] }
async-trait = "0.1.87"
