[package]
name = "chatter"
version = "0.1.0"
edition = "2024"
license.workspace = true
authors.workspace = true

[dependencies]
async-openai = "0.27.2"
async-stream = { workspace = true }
derive_builder = "0.20.2"
futures = { workspace = true }
geo-traits = "0.2.0"
geo-types = { workspace = true }
km-to-sql = "0.1.1"
rust_decimal = { version = "1.37.1", features = ["db-tokio-postgres"] }
schemars = "0.8"
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = "2"
tokio = { workspace = true }
tokio-postgres = { workspace = true }
deadpool-postgres = { workspace = true }
tokio-stream = { workspace = true }
ulid = { workspace = true }
wkb = "0.8.0"

# used in data/
aws-config = { version = "1", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1"
serde_dynamo = { version = "4", features = ["aws-sdk-dynamodb+1"] }
chrono = { workspace = true }
async-trait = "0.1.87"
