[package]
name = "cli"
version = "0.1.0"
edition = "2024"
license.workspace = true
authors.workspace = true

[dependencies]
anyhow = "1.0"
chatter = { path = "../chatter" }
clap = { version = "4.5.30", features = ["derive"] }
console = "0.15.10"
dialoguer = "0.11.0"
indicatif = { version = "0.17.11", features = ["tokio"] }
tokio = { version = "1", features = ["full"] }
tokio-postgres = { version = "0.7.13", features = ["array-impls", "with-serde_json-1"] }
